--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,6 +13,7 @@
       <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
       sample application.
     </p>
+    <p>Also, Hello World!</p>
 <!--
   </body>
 </html>-->
