--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,7 +20,7 @@ textarea {
     margin-bottom: 20px;
   }
   .btn {
-    margin-top: 10px;
+    margin-top: 20px;
   }
 }
 
@@ -170,4 +170,17 @@ input {
   .form-control {
     color: $state-danger-text;
   }
+}
+.checkbox {
+  margin-top: -10px;
+  margin-bottom: 10px;
+  span {
+    margin-left: 20px;
+    font-weight: normal;
+  }
+}
+
+#session_remember_me {
+  width: auto;
+  margin-left: -20px;
 }
