Finish user edit, update, index, and destroy actions

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,10 @@
-<% @users.each do |user| %>
-<p><%= user.name %>, <%= user.email %></p>
-<% end %>
+<% provide(:title, 'All Users') %>
+<h1>All Users</h1>
+
+<%= will_paginate %>
+
+<ul class="users">
+	<%= render @users %>
+</ul>
+
+<%= will_paginate %>
